[package]
edition = "2021"
name = "jconf"
version = "0.1.0"
authors = ["PoOnesNerfect <jack.y.l.dev@gmail.com>"]
description = "CLI that helps keep all your config files synchronized in one place"
documentation = "https://docs.rs/jconf/"
repository = "https://github.com/PoOnesNerfect/jconf"
homepage = "https://github.com/PoOnesNerfect/jconf"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
color-eyre = { version = "0.6" }
glob = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7" }
